zellij-integration-tests/tests/snapshots/keybind_presets__switching_keybind_presets_updates_the_status_bar_without_a_new_tab-2.snap
---
source: zellij-integration-tests/tests/keybind_presets.rs
expression: normalized(&grid_snapshot)
---
 Zellij (test)  Tab #1  + 
$ █
 Ctrl + <g> LOCK  <p> PANE  <t> TAB  <n> RESIZE  <h> MOVE  <s> SEARCH  <o> SESSION  <q> QUIT        ...
