zellij-integration-tests/tests/snapshots/keybind_presets__switching_keybind_presets_updates_the_status_bar_without_a_new_tab.snap
---
source: zellij-integration-tests/tests/keybind_presets.rs
expression: normalized(&grid_snapshot)
---
 Zellij (test)  Tab #1  + 
$ █
 Ctrl g  UNLOCK  p  PANE  t  TAB  r  RESIZE  m  MOVE  s  SEARCH  o  SESSION  Ctrl q  QUIT            ...
